[package]
name = "monitoring-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
hyper = "0.14.27"
log = "0.4.20"
mobot = "0.3.10"
routerify = "3.0.0"
serde = "1.0.188"
serde_json = "1.0.105"
tokio = "1.32.0"
